--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ediEintrag" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiEintragController">
+<AnchorPane fx:id="ediEintrag" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiEintragController">
 	<children>
 		<VBox fx:id="eintragVBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
@@ -39,7 +39,7 @@
 									<children>
 										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="51.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Dokumente:" GridPane.rowIndex="2">
 										</Label>
-										<ComboBox layoutX="9.600000381469727" layoutY="9.600000381469727" maxWidth="1.7976931348623157E308" AnchorPane.leftAnchor="90.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+										<ComboBox fx:id="cmbIntegration" layoutX="9.600000381469727" layoutY="9.600000381469727" maxWidth="1.7976931348623157E308" AnchorPane.leftAnchor="90.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="68.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Konfiguration:" GridPane.rowIndex="3">
 										</Label>
 										<ComboBox disable="true" layoutX="9.600000381469727" layoutY="85.60000038146973" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -62,9 +62,9 @@
 						</AnchorPane>
 					</content>
 				</TitledPane>
-				<TitledPane fx:id="paneEdiEintrag" animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="314.0" prefWidth="950.0" text="EDI-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS">
+				<TitledPane fx:id="paneEdiEintrag" animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="314.0" text="EDI-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS">
 					<content>
-						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="366.0" prefWidth="948.0">
+						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="366.0">
 							<children>
 								<VBox layoutX="9.600000381469727" layoutY="9.600000381469727" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
@@ -111,18 +111,18 @@
 													</GridPane.margin>
 												</ComboBox>
 												<ComboBox fx:id="cmbBuOb2" editable="true" layoutX="515.0" layoutY="35.0" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-												<ComboBox fx:id="cmbBuOb3" editable="true" layoutX="515.0" layoutY="68.0" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="3" /><ComboBox fx:id="cmb2empf" prefWidth="150.0" promptText="kein 2. Empfänger" visible="false" GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
+												<ComboBox fx:id="cmbBuOb3" editable="true" layoutX="515.0" layoutY="68.0" maxWidth="1.7976931348623157E308" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="3" /><ChoiceBox fx:id="ccbEmpfaenger2" prefHeight="27.0" prefWidth="20.0" style="-fx-background-color: ddd;" visible="false" GridPane.halignment="RIGHT" GridPane.rowIndex="2" /><ChoiceBox fx:id="ccbEmpfaenger3" prefHeight="27.0" prefWidth="20.0" style="-fx-background-color: ddd;" visible="false" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
 											</children>
 											<padding>
 												<Insets bottom="5.0" left="5.0" right="8.0" top="5.0" />
 											</padding>
 										</GridPane>
-										<GridPane hgap="8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="136.0" prefWidth="926.0" vgap="8.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" VBox.vgrow="ALWAYS">
+										<GridPane hgap="8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="136.0" vgap="8.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" VBox.vgrow="ALWAYS">
 											<columnConstraints>
 												<ColumnConstraints hgrow="NEVER" prefWidth="120.0" />
 												<ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
 												<ColumnConstraints hgrow="NEVER" maxWidth="95.0" minWidth="-Infinity" prefWidth="95.0" />
-												<ColumnConstraints hgrow="NEVER" maxWidth="95.0" minWidth="-Infinity" prefWidth="95.0" />
+												<ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="115.0" />
 											</columnConstraints>
 											<rowConstraints>
 												<RowConstraints maxHeight="30.0" minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
@@ -156,15 +156,13 @@
 														<Insets />
 													</GridPane.margin>
 												</TextArea>
-												<TextField layoutX="753.0" layoutY="13.0" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-												<TextField layoutX="702.0" layoutY="55.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 												<Label alignment="CENTER_RIGHT" layoutX="618.0" layoutY="26.0" maxWidth="1.7976931348623157E308" prefHeight="17.0" text="letzte Änderung:" textAlignment="CENTER" GridPane.columnIndex="2">
 													<GridPane.margin>
 														<Insets />
 													</GridPane.margin>
 												</Label>
 												<Label alignment="CENTER_RIGHT" layoutX="30.0048828125" layoutY="31.5" maxWidth="1.7976931348623157E308" text="Ausführungs-Intervall:">
-												</Label><ComboBox fx:id="cmbIntervall" editable="true" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
+												</Label><ComboBox fx:id="cmbIntervall" editable="true" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" /><DatePicker fx:id="dpProduktivSeit" GridPane.columnIndex="3" GridPane.rowIndex="1" /><DatePicker fx:id="dpProduktivBis" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 											</children>
 											<padding>
 												<Insets left="5.0" right="8.0" />
@@ -182,7 +180,7 @@
 				<TitledPane animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Details">
 					<content>
 						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-<children><Label layoutX="118.0" layoutY="69.0" AnchorPane.bottomAnchor="20.0" AnchorPane.topAnchor="69.0" /><Label layoutX="118.0" layoutY="39.0" prefHeight="37.0" prefWidth="705.0" text="Hier werden die Zwischenschritte zur aktuell ausgewählten Sender-Empfänger-Geschäftsobjekt-Transfer verwaltet" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="88.0" AnchorPane.topAnchor="70.0" />
+<children><Label layoutX="118.0" layoutY="69.0" AnchorPane.bottomAnchor="20.0" AnchorPane.topAnchor="69.0" /><Label layoutX="118.0" layoutY="39.0" prefHeight="37.0" text="Hier werden die Zwischenschritte zum aktuell ausgewählten Sender-Empfänger-Geschäftsobjekt-Transfer verwaltet" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="88.0" AnchorPane.topAnchor="70.0" />
 </children></AnchorPane>
 					</content>
 				</TitledPane>
