--- a/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
@@ -121,12 +121,12 @@
 						</AnchorPane>
 					</content>
 				</Tab>
-				<Tab disable="true" text="Anbindungen">
+				<Tab disable="true" text="Integrationen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 					</content>
 				</Tab>
-				<Tab disable="true" text="Szenarios">
+				<Tab disable="true" text="Konfigurationen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 					</content>
