--- a/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
@@ -6,39 +6,39 @@
 
 <AnchorPane fx:id="ediKomponente" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiKomponenteController">
 	<children>
-		<SplitPane dividerPositions="0.1, 0.4" focusTraversable="true" orientation="VERTICAL" prefHeight="600.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane dividerPositions="0.1, 0.4" focusTraversable="true" orientation="VERTICAL" prefHeight="600.0" prefWidth="840.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items><ToolBar prefWidth="200.0">
   <items>
     <Button fx:id="btnSpeichern" mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
   </items>
 </ToolBar>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
 						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften der Komponente" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
-										<TextField fx:id="tfBezeichnung" layoutX="86.0" layoutY="11.0" prefHeight="25.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="15.0" />
-										<Label layoutX="8.0" layoutY="15.0" text="Bezeichnung:" />
-										<Label layoutX="6.0" layoutY="64.0" text="Beschreibung:" AnchorPane.topAnchor="40.0" /><TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" prefHeight="51.0" prefWidth="480.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="40.0" />
+										<TextField fx:id="tfBezeichnung" layoutX="86.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="5.0" />
+										<Label layoutX="8.0" layoutY="15.0" prefWidth="81.0" text="Bezeichnung:" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="5.0" />
+										<Label layoutX="319.0" layoutY="15.0" text="Beschreibung:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="5.0" /><ListView fx:id="lvAnsprechpartner" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="40.0" /><TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" /><Label alignment="CENTER" layoutX="6.0" layoutY="64.0" text="Kontaktperson:" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="40.0" /><Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefWidth="80.0" text="hinzufügen" AnchorPane.leftAnchor="14.0" /><Button layoutX="14.0" layoutY="108.0" mnemonicParsing="false" prefWidth="80.0" text="entfernen" AnchorPane.leftAnchor="14.0" />
 									</children>
 								</AnchorPane>
 							</content>
 						</TitledPane>
 					</children>
 				</AnchorPane>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0">
 					<children>
 						<TitledPane animated="false" layoutX="38.0" layoutY="-11.0" prefHeight="146.0" prefWidth="298.0" text="Verwendungen der Komponente" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
-										<TableView fx:id="tvVerwendungen" prefHeight="120.0" prefWidth="296.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+										<TableView fx:id="tvVerwendungen" prefHeight="120.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 											<columns>
 												<TableColumn fx:id="tcEdiNr" prefWidth="61.000001549720764" text="Edi-Nr." />
-												<TableColumn fx:id="tcSender" maxWidth="500.0" prefWidth="183.99996185302734" text="Edi-Sender" />
-												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" prefWidth="179.0" text="Edi-Empfänger" /><TableColumn fx:id="tcGeschaeftsobjekt" prefWidth="135.00003051757812" text="Geschäftsobjekt" />
-												<TableColumn fx:id="tcDatumAb" prefWidth="63.0" text="Ab-Datum" visible="false" />
+												<TableColumn fx:id="tcSender" maxWidth="500.0" prefWidth="200.0" text="Edi-Sender" />
+												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" prefWidth="200.0" text="Edi-Empfänger" /><TableColumn fx:id="tcGeschaeftsobjekt" prefWidth="180.0" text="Geschäftsobjekt" />
+												<TableColumn fx:id="tcDatumAb" prefWidth="75.0" text="Ab-Datum" />
 												<TableColumn fx:id="tcDatumBis" prefWidth="75.0" text="Bis-Datum" />
 											</columns>
 										</TableView>
