--- a/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
@@ -7,11 +7,13 @@
 <AnchorPane fx:id="ediKomponente" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiKomponenteController">
 	<children>
 		<SplitPane dividerPositions="0.1, 0.4" focusTraversable="true" orientation="VERTICAL" prefHeight="600.0" prefWidth="840.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<items><ToolBar prefWidth="200.0">
-  <items>
-    <Button fx:id="btnSpeichern" mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" /><Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text="Komponente löschen" />
-  </items>
-</ToolBar>
+			<items>
+				<ToolBar prefWidth="200.0">
+  					<items>
+    					<Button fx:id="btnSpeichern" mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
+    					<Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text="Komponente löschen" />
+	  				</items>
+				</ToolBar>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
 						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften der Komponente" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
