--- a/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ediSystem" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiSystemController">
 	<children>
-		<SplitPane dividerPositions="0.1, 0.4" focusTraversable="true" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane dividerPositions="0.06354515050167224, 0.39464882943143814" focusTraversable="true" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
   			<items>
   				<ToolBar layoutX="205.0" layoutY="185.5" prefWidth="200.0">
 					<items>
 						<Button mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
-						<Button mnemonicParsing="false" onAction="#loeschen" text="System löschen" />
+						<Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text="System löschen" />
 					</items>
 				</ToolBar>
     			<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -19,10 +19,30 @@
 						<TextArea layoutX="89.0" layoutY="58.0" prefHeight="117.0" prefWidth="465.0" />
 						<Label layoutX="8.0" layoutY="15.0" prefWidth="81.0" text="Bezeichnung:" />
 						<Label layoutX="8.0" layoutY="58.0" text="Beschreibung:" />
-						<TextField layoutX="89.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" />
+						<TextField fx:id="tfBezeichnung" layoutX="89.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" />
 					</children>
 				</AnchorPane>
-    			<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+    			<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <TitledPane animated="false" prefHeight="367.0" prefWidth="598.0" text="Verwendungen des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView fx:id="tvVerwendungen" prefHeight="120.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                                 <columns>
+                                    <TableColumn fx:id="tcEdiNr" prefWidth="61.000001549720764" text="Edi-Nr." />
+                                    <TableColumn fx:id="tcSender" maxWidth="500.0" prefWidth="200.0" text="Edi-Sender" />
+                                    <TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" prefWidth="200.0" text="Edi-Empfänger" />
+                                    <TableColumn fx:id="tcGeschaeftsobjekt" prefWidth="180.0" text="Geschäftsobjekt" />
+                                    <TableColumn fx:id="tcDatumAb" prefWidth="75.0" text="Ab-Datum" />
+                                    <TableColumn fx:id="tcDatumBis" prefWidth="75.0" text="Bis-Datum" />
+                                 </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+               </children></AnchorPane>
 			</items>
 		</SplitPane>
 	</children>
