--- a/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="ediSystem" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiSystemController">
+<AnchorPane fx:id="ediSystem" maxHeight="1.7976931348623157E308" prefHeight="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiSystemController">
 	<children>
-		<SplitPane dividerPositions="0.06354515050167224, 0.39464882943143814" focusTraversable="true" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-  			<items>
-  				<ToolBar layoutX="205.0" layoutY="185.5" prefWidth="200.0">
+<VBox maxHeight="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<children>
+  				<ToolBar layoutX="205.0" layoutY="185.5" maxHeight="35.0" minHeight="35.0">
 					<items>
 						<Button mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
 						<Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text="System löschen" />
 					</items>
+<VBox.margin>
+<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+</VBox.margin>
 				</ToolBar>
-    			<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+		<SplitPane dividerPositions="0.4355909694555113" focusTraversable="true" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
+  			<items>
+<AnchorPane minHeight="0.0" minWidth="0.0">
+<children>
+<TitledPane animated="false" collapsible="false" prefHeight="267.0" prefWidth="933.0" text="Eigenschaften des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<content>
+    			<AnchorPane maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
 					<children>
-						<TextArea layoutX="89.0" layoutY="58.0" prefHeight="117.0" prefWidth="465.0" />
 						<Label layoutX="8.0" layoutY="15.0" prefWidth="81.0" text="Bezeichnung:" />
+						<TextField fx:id="tfBezeichnung" layoutX="89.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.topAnchor="5.0" />
 						<Label layoutX="8.0" layoutY="58.0" text="Beschreibung:" />
-						<TextField fx:id="tfBezeichnung" layoutX="89.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" />
+						<TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" maxHeight="1.7976931348623157E308" AnchorPane.bottomAnchor="9.0" AnchorPane.topAnchor="45.0" />
 					</children>
 				</AnchorPane>
-    			<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <TitledPane animated="false" prefHeight="367.0" prefWidth="598.0" text="Verwendungen des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+</content>
+</TitledPane>
+</children>
+</AnchorPane>
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0">
+<children>
+                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Verwendungen des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <TableView fx:id="tvVerwendungen" prefHeight="120.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                              <TableView fx:id="tvVerwendungen" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                  <columns>
-                                    <TableColumn fx:id="tcEdiNr" prefWidth="61.000001549720764" text="Edi-Nr." />
-                                    <TableColumn fx:id="tcSender" maxWidth="500.0" prefWidth="200.0" text="Edi-Sender" />
-                                    <TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" prefWidth="200.0" text="Edi-Empfänger" />
-                                    <TableColumn fx:id="tcGeschaeftsobjekt" prefWidth="180.0" text="Geschäftsobjekt" />
-                                    <TableColumn fx:id="tcDatumAb" prefWidth="75.0" text="Ab-Datum" />
-                                    <TableColumn fx:id="tcDatumBis" prefWidth="75.0" text="Bis-Datum" />
+                                    <TableColumn fx:id="tcEdiNr" editable="false" maxWidth="50.0" minWidth="44.0" prefWidth="44.0" text="Edi-Nr." />
+                                    <TableColumn fx:id="tcSender" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Sender" />
+                                    <TableColumn fx:id="tcEmpfaenger" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Empfänger" />
+                                    <TableColumn fx:id="tcGeschaeftsobjekt" editable="false" maxWidth="400.0" minWidth="100.0" prefWidth="200.0" text="Geschäftsobjekt" />
+                                    <TableColumn fx:id="tcDatumAb" editable="false" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="Ab-Datum" />
+                                    <TableColumn fx:id="tcDatumBis" editable="false" maxWidth="85.0" minWidth="85.0" prefWidth="85.0" text="Bis-Datum" />
                                  </columns>
+<columnResizePolicy>
+<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+</columnResizePolicy>
                               </TableView>
-                           </children>
-                        </AnchorPane>
                      </content>
                   </TitledPane>
-               </children></AnchorPane>
+</children>
+</AnchorPane>
 			</items>
 		</SplitPane>
+</children>
+</VBox>
 	</children>
 </AnchorPane>
